[package]
name = "siumai"
version.workspace = true
edition.workspace = true
authors.workspace = true
description = "A unified LLM interface library for Rust"
license.workspace = true
repository.workspace = true
homepage.workspace = true
documentation = "https://docs.rs/siumai"
readme = "../README.md"
keywords = ["llm", "ai", "openai", "anthropic", "async"]
categories = ["api-bindings"]
autoexamples = false

exclude = [
    "../docs/**",
    "../siumai-extras",
    "../examples/**",
    "../scripts/**",
    "../repo-ref/**",
    "../_third_party/**",
    "../target/**",
    "../*.log",
    "tests/fixtures/**",
]

[lib]
doctest = false

[package.metadata.docs.rs]
no-default-features = true
features = ["openai"]
rustdoc-args = ["--cfg", "docsrs"]

[dependencies]
# Workspace split crates (beta.5)
siumai-core = { workspace = true, default-features = false }
siumai-registry = { workspace = true, default-features = false }

# Provider crates (direct dependencies; breaking from the legacy umbrella `siumai-providers`)
siumai-provider-openai = { version = "0.11.0-beta.5", path = "../siumai-provider-openai", default-features = false, optional = true }
siumai-provider-openai-compatible = { version = "0.11.0-beta.5", path = "../siumai-provider-openai-compatible", default-features = false, optional = true }
siumai-provider-azure = { version = "0.11.0-beta.5", path = "../siumai-provider-azure", default-features = false, optional = true }
siumai-protocol-openai = { version = "0.11.0-beta.5", path = "../siumai-protocol-openai", default-features = false, optional = true }
siumai-provider-anthropic = { version = "0.11.0-beta.5", path = "../siumai-provider-anthropic", default-features = false, optional = true }
siumai-protocol-anthropic = { version = "0.11.0-beta.5", path = "../siumai-protocol-anthropic", default-features = false, optional = true }
siumai-provider-gemini = { version = "0.11.0-beta.5", path = "../siumai-provider-gemini", default-features = false, optional = true }
siumai-protocol-gemini = { version = "0.11.0-beta.5", path = "../siumai-protocol-gemini", default-features = false, optional = true }
siumai-provider-google-vertex = { version = "0.11.0-beta.5", path = "../siumai-provider-google-vertex", default-features = false, optional = true }
siumai-provider-ollama = { version = "0.11.0-beta.5", path = "../siumai-provider-ollama", default-features = false, optional = true }
siumai-provider-groq = { version = "0.11.0-beta.5", path = "../siumai-provider-groq", default-features = false, optional = true }
siumai-provider-xai = { version = "0.11.0-beta.5", path = "../siumai-provider-xai", default-features = false, optional = true }
siumai-provider-minimaxi = { version = "0.11.0-beta.5", path = "../siumai-provider-minimaxi", default-features = false, optional = true }
siumai-provider-deepseek = { version = "0.11.0-beta.5", path = "../siumai-provider-deepseek", default-features = false, optional = true }
siumai-provider-cohere = { version = "0.11.0-beta.5", path = "../siumai-provider-cohere", default-features = false, optional = true }
siumai-provider-togetherai = { version = "0.11.0-beta.5", path = "../siumai-provider-togetherai", default-features = false, optional = true }
siumai-provider-amazon-bedrock = { version = "0.11.0-beta.5", path = "../siumai-provider-amazon-bedrock", default-features = false, optional = true }

# Async traits
async-trait.workspace = true

# Serialization
serde.workspace = true
serde_json.workspace = true
jsonwebtoken = { workspace = true, optional = true }

# HTTP client
reqwest.workspace = true

# Async runtime
tokio.workspace = true
futures.workspace = true

# Streaming
futures-util.workspace = true
async-stream.workspace = true
eventsource-stream.workspace = true
tokio-util.workspace = true

# Time handling
chrono.workspace = true

# Error handling
thiserror.workspace = true

# UUID generation
uuid.workspace = true

# Tracing and observability
tracing.workspace = true

# Random number generation (for retry jitter)
rand.workspace = true

# URL encoding
urlencoding.workspace = true
infer.workspace = true

# Security
secrecy.workspace = true

# Retry mechanism
backoff.workspace = true
lru.workspace = true

# JSON repair for handling malformed LLM outputs
jsonrepair = { version = "0.1", optional = true, features = ["serde"] }
base64 = "0.22.1"
hex = { version = "0.4.3", optional = true }

[features]
# Default features - keep builds minimal by enabling OpenAI only.
# Enable other providers explicitly or use `all-providers`.
default = ["openai"]

# Enable structured JSON messages (MessageContent::Json)
structured-messages = [
    "siumai-core/structured-messages",
    "siumai-registry/structured-messages",
    "siumai-provider-openai/structured-messages",
    "siumai-provider-azure/structured-messages",
    "siumai-provider-anthropic/structured-messages",
    "siumai-provider-gemini/structured-messages",
    "siumai-provider-google-vertex/structured-messages",
    "siumai-provider-ollama/structured-messages",
    "siumai-provider-groq/structured-messages",
    "siumai-provider-xai/structured-messages",
    "siumai-provider-minimaxi/structured-messages",
    "siumai-provider-deepseek/structured-messages",
    "siumai-provider-cohere/structured-messages",
    "siumai-provider-togetherai/structured-messages",
    "siumai-provider-amazon-bedrock/structured-messages",
    "siumai-protocol-openai/structured-messages",
    "siumai-protocol-anthropic/structured-messages",
    "siumai-protocol-gemini/structured-messages",
]

# Provider features - forwarded to split crates
openai = [
    "siumai-core/openai",
    "siumai-registry/openai",
    "dep:siumai-provider-openai",
    "siumai-provider-openai/openai",
    "dep:siumai-provider-openai-compatible",
    "siumai-provider-openai-compatible/openai-standard",
    "dep:siumai-protocol-openai",
    "siumai-protocol-openai/openai-standard",
]

# OpenAI WebSocket transport for streaming `/responses` (persistent connection, lower TTFB in tool loops).
openai-websocket = [
    "openai",
    "siumai-provider-openai/openai-websocket",
    "siumai-registry/openai-websocket",
]
azure = [
    "siumai-core/openai",
    "siumai-registry/azure",
    "dep:siumai-provider-azure",
    "siumai-provider-azure/azure",
]
anthropic = [
    "siumai-core/anthropic",
    "siumai-registry/anthropic",
    "dep:siumai-provider-anthropic",
    "siumai-provider-anthropic/anthropic",
    "dep:siumai-protocol-anthropic",
    "siumai-protocol-anthropic/anthropic-standard",
]
google = [
    "siumai-core/google",
    "siumai-registry/google",
    "dep:siumai-provider-gemini",
    "siumai-provider-gemini/google",
    "dep:siumai-protocol-gemini",
    "siumai-protocol-gemini/google",
]
google-vertex = [
    "siumai-core/google",
    "siumai-registry/google-vertex",
    "dep:siumai-provider-google-vertex",
    "siumai-provider-google-vertex/google-vertex",
]
ollama = ["siumai-core/ollama", "siumai-registry/ollama", "dep:siumai-provider-ollama", "siumai-provider-ollama/ollama"]
xai = ["siumai-core/xai", "siumai-registry/xai", "dep:siumai-provider-xai", "siumai-provider-xai/xai"]
groq = ["siumai-core/groq", "siumai-registry/groq", "dep:siumai-provider-groq", "siumai-provider-groq/groq"]
minimaxi = ["siumai-core/minimaxi", "siumai-registry/minimaxi", "dep:siumai-provider-minimaxi", "siumai-provider-minimaxi/minimaxi"]
deepseek = [
    "siumai-core/openai",
    "dep:siumai-provider-deepseek",
    "siumai-provider-deepseek/deepseek",
    "dep:siumai-provider-openai-compatible",
    "siumai-provider-openai-compatible/openai-standard",
    "dep:siumai-protocol-openai",
    "siumai-protocol-openai/openai-standard",
]
cohere = ["siumai-core/cohere", "siumai-registry/cohere", "dep:siumai-provider-cohere", "siumai-provider-cohere/cohere"]
togetherai = [
    "siumai-core/togetherai",
    "siumai-registry/togetherai",
    "dep:siumai-provider-togetherai",
    "siumai-provider-togetherai/togetherai",
]
bedrock = [
    "siumai-core/bedrock",
    "siumai-registry/bedrock",
    "dep:siumai-provider-amazon-bedrock",
    "siumai-provider-amazon-bedrock/bedrock",
]

# GCP authentication feature (for Google Vertex AI, ADC, Service Account)
gcp = ["siumai-core/gcp", "siumai-registry/gcp", "google", "google-vertex"]

# JSON repair support for handling malformed LLM outputs
json-repair = [
    "dep:jsonrepair",
    "siumai-core/json-repair",
    "siumai-registry/json-repair",
    "siumai-provider-gemini/json-repair",
]

# HTTP client features (passed through to reqwest)
gzip = ["siumai-core/gzip", "siumai-registry/gzip"]
brotli = ["siumai-core/brotli", "siumai-registry/brotli"]

# Convenience features for common combinations
all-providers = [
    "openai",
    "anthropic",
    "google",
    "ollama",
    "xai",
    "groq",
    "minimaxi",
    "deepseek",
    "cohere",
    "togetherai",
    "bedrock",
]

# Protocol-only facade (stable imports for protocol mapping).
protocol-openai = ["siumai-core/openai", "dep:siumai-protocol-openai", "siumai-protocol-openai/openai-standard"]
protocol-anthropic = ["siumai-core/anthropic", "dep:siumai-protocol-anthropic", "siumai-protocol-anthropic/anthropic-standard"]
protocol-gemini = ["siumai-core/google", "dep:siumai-protocol-gemini", "siumai-protocol-gemini/google"]
protocols = ["protocol-openai", "protocol-anthropic", "protocol-gemini"]

[dev-dependencies]
mockito.workspace = true
wiremock.workspace = true
futures-util.workspace = true
axum.workspace = true
siumai-provider-openai-compatible = { version = "0.11.0-beta.5", path = "../siumai-provider-openai-compatible", default-features = false, features = ["openai-standard"] }

# Examples configuration
# Examples (0.11.0 refactored structure)
# 01-quickstart
[[example]]
name = "basic-chat"
path = "examples/01-quickstart/basic-chat.rs"
required-features = ["openai"]

[[example]]
name = "streaming"
path = "examples/01-quickstart/streaming.rs"
required-features = ["openai"]

[[example]]
name = "provider-switching"
path = "examples/01-quickstart/provider-switching.rs"
required-features = ["openai", "anthropic", "google"]

# 02-core-api/chat
[[example]]
name = "simple-chat"
path = "examples/02-core-api/chat/simple-chat.rs"
required-features = ["openai"]

[[example]]
name = "chat-with-tools"
path = "examples/02-core-api/chat/chat-with-tools.rs"
required-features = ["openai"]

[[example]]
name = "chat-request"
path = "examples/02-core-api/chat/chat-request.rs"
required-features = ["openai"]

# 02-core-api/streaming
[[example]]
name = "basic-stream"
path = "examples/02-core-api/streaming/basic-stream.rs"
required-features = ["openai"]

[[example]]
name = "stream-request"
path = "examples/02-core-api/streaming/stream-request.rs"
required-features = ["openai"]

[[example]]
name = "stream-with-cancel"
path = "examples/02-core-api/streaming/stream-with-cancel.rs"
required-features = ["openai"]

# 02-core-api/tools
[[example]]
name = "function-calling"
path = "examples/02-core-api/tools/function-calling.rs"
required-features = ["openai"]

[[example]]
name = "tool-loop"
path = "examples/02-core-api/tools/tool-loop.rs"
required-features = ["openai"]

[[example]]
name = "tool-choice-demo"
path = "examples/02-core-api/tools/tool-choice-demo.rs"
required-features = ["openai"]

# 02-core-api/multimodal
[[example]]
name = "vision"
path = "examples/02-core-api/multimodal/vision.rs"
required-features = ["openai"]

# 02-core-api/misc
[[example]]
name = "usage-builder-demo"
path = "examples/02-core-api/usage-builder-demo.rs"

# 03-advanced-features/provider-params
[[example]]
name = "structured-output"
path = "examples/03-advanced-features/provider-params/structured-output.rs"
required-features = ["openai"]

[[example]]
name = "reasoning-effort"
path = "examples/03-advanced-features/provider-params/reasoning-effort.rs"
required-features = ["openai"]

# 03-advanced-features/request-building
[[example]]
name = "complex-request"
path = "examples/03-advanced-features/request-building/complex-request.rs"
required-features = ["openai"]

# 03-advanced-features/openai
[[example]]
name = "openai-audio-multimodal"
path = "examples/03-advanced-features/openai-audio-multimodal.rs"
required-features = ["openai"]

[[example]]
name = "openai-prediction-websearch"
path = "examples/03-advanced-features/openai-prediction-websearch.rs"
required-features = ["openai"]

# 03-advanced-features/middleware
[[example]]
name = "http-interceptor"
path = "examples/03-advanced-features/middleware/http-interceptor.rs"
required-features = ["openai"]

[[example]]
name = "advanced-middleware"
path = "examples/03-advanced-features/middleware/advanced-middleware.rs"
required-features = ["openai"]

[[example]]
name = "middleware-builder"
path = "examples/03-advanced-features/middleware_builder.rs"
required-features = ["openai"]

# 03-advanced-features/retry
[[example]]
name = "retry-config"
path = "examples/03-advanced-features/retry/retry-config.rs"
required-features = ["openai"]

# 03-advanced-features/error-handling
[[example]]
name = "error-types"
path = "examples/03-advanced-features/error-handling/error-types.rs"
required-features = ["openai"]

# 04-provider-specific/openai
[[example]]
name = "responses-api"
path = "examples/04-provider-specific/openai/responses-api.rs"
required-features = ["openai"]

[[example]]
name = "responses-ext"
path = "examples/04-provider-specific/openai/responses-ext.rs"
required-features = ["openai"]

[[example]]
name = "openai-responses-streaming-tools"
path = "examples/04-provider-specific/openai/responses-streaming-tools.rs"
required-features = ["openai"]

[[example]]
name = "responses-multi-turn"
path = "examples/04-provider-specific/openai/responses-multi-turn.rs"
required-features = ["openai"]

[[example]]
name = "openai-responses-websocket-incremental"
path = "examples/04-provider-specific/openai/responses-websocket-incremental.rs"
required-features = ["openai-websocket"]

[[example]]
name = "openai-web-search"
path = "examples/04-provider-specific/openai/web_search.rs"
required-features = ["openai"]

[[example]]
name = "openai-file-search"
path = "examples/04-provider-specific/openai/file_search.rs"
required-features = ["openai"]

[[example]]
name = "openai-file-search-results"
path = "examples/04-provider-specific/openai/file_search_results.rs"
required-features = ["openai"]

[[example]]
name = "openai-computer-use"
path = "examples/04-provider-specific/openai/computer_use.rs"
required-features = ["openai"]

[[example]]
name = "openai-tts-sse-streaming"
path = "examples/04-provider-specific/openai/tts_sse_streaming.rs"
required-features = ["openai"]

[[example]]
name = "openai-stt-sse-streaming"
path = "examples/04-provider-specific/openai/stt_sse_streaming.rs"
required-features = ["openai"]

# 04-provider-specific/minimaxi
[[example]]
name = "minimaxi_basic"
path = "examples/04-provider-specific/minimaxi/minimaxi_basic.rs"
required-features = ["minimaxi"]

[[example]]
name = "minimaxi_tts-ext"
path = "examples/04-provider-specific/minimaxi/tts-ext.rs"
required-features = ["minimaxi"]

[[example]]
name = "minimaxi_video-ext"
path = "examples/04-provider-specific/minimaxi/video-ext.rs"
required-features = ["minimaxi"]

[[example]]
name = "minimaxi_music-ext"
path = "examples/04-provider-specific/minimaxi/music-ext.rs"
required-features = ["minimaxi"]

# 04-provider-specific/anthropic
[[example]]
name = "extended-thinking"
path = "examples/04-provider-specific/anthropic/extended-thinking.rs"
required-features = ["anthropic"]

[[example]]
name = "extended-thinking-ext"
path = "examples/04-provider-specific/anthropic/extended-thinking-ext.rs"
required-features = ["anthropic"]

[[example]]
name = "thinking-replay-ext"
path = "examples/04-provider-specific/anthropic/thinking-replay-ext.rs"
required-features = ["anthropic"]

[[example]]
name = "prompt-caching"
path = "examples/04-provider-specific/anthropic/prompt-caching.rs"
required-features = ["anthropic"]

[[example]]
name = "anthropic-web-search"
path = "examples/04-provider-specific/anthropic/web_search.rs"
required-features = ["anthropic"]

[[example]]
name = "anthropic-web-search-streaming"
path = "examples/04-provider-specific/anthropic/web_search_streaming.rs"
required-features = ["anthropic"]

# 04-provider-specific/google
[[example]]
name = "grounding"
path = "examples/04-provider-specific/google/grounding.rs"
required-features = ["google"]

[[example]]
name = "google-url-context"
path = "examples/04-provider-specific/google/url_context.rs"
required-features = ["google"]

[[example]]
name = "google-enterprise-web-search"
path = "examples/04-provider-specific/google/enterprise_web_search.rs"
required-features = ["google"]

[[example]]
name = "vertex_chat"
path = "examples/04-provider-specific/google/vertex_chat.rs"
required-features = ["google", "gcp"]

[[example]]
name = "vertex_imagen_edit"
path = "examples/04-provider-specific/google/vertex_imagen_edit.rs"
required-features = ["google", "gcp"]

[[example]]
name = "file_search"
path = "examples/04-provider-specific/google/file_search.rs"
required-features = ["google"]

[[example]]
name = "file_search-ext"
path = "examples/04-provider-specific/google/file_search-ext.rs"
required-features = ["google"]

# 04-provider-specific/ollama
[[example]]
name = "local-models"
path = "examples/04-provider-specific/ollama/local-models.rs"
required-features = ["ollama"]

# 04-provider-specific/xai
[[example]]
name = "grok"
path = "examples/04-provider-specific/xai/grok.rs"
required-features = ["xai"]

# 04-provider-specific/openai-compatible
[[example]]
name = "moonshot-basic"
path = "examples/04-provider-specific/openai-compatible/moonshot-basic.rs"
required-features = ["openai"]

[[example]]
name = "moonshot-tools"
path = "examples/04-provider-specific/openai-compatible/moonshot-tools.rs"
required-features = ["openai"]

[[example]]
name = "moonshot-long-context"
path = "examples/04-provider-specific/openai-compatible/moonshot-long-context.rs"
required-features = ["openai"]

[[example]]
name = "moonshot-siumai-builder"
path = "examples/04-provider-specific/openai-compatible/moonshot-siumai-builder.rs"
required-features = ["openai"]

# 05-integrations/registry
[[example]]
name = "basic-registry"
path = "examples/05-integrations/registry/basic-registry.rs"
required-features = ["openai", "anthropic", "google"]

[[example]]
name = "registry_quickstart"
path = "examples/05-integrations/registry/quickstart.rs"
required-features = ["all-providers"]

[[example]]
name = "registry-with-cache"
path = "examples/05-integrations/registry/registry-with-cache.rs"
required-features = ["openai"]

[[example]]
name = "custom-middleware"
path = "examples/05-integrations/registry/custom-middleware.rs"
required-features = ["openai"]

# 05-integrations/mcp
[[example]]
name = "stdio-client"
path = "examples/05-integrations/mcp/stdio-client.rs"

[[example]]
name = "complete-stdio-example"
path = "examples/05-integrations/mcp/complete-stdio-example.rs"
required-features = ["openai"]

[[example]]
name = "sse-http-examples"
path = "examples/05-integrations/mcp/sse-http-examples.rs"
required-features = ["openai"]

# 05-integrations/server-adapters (moved to siumai-extras)
# example removed; use siumai-extras::server feature examples instead

# 05-integrations/telemetry (moved to siumai-extras)
# Keep a minimal example here; advanced exporters live in siumai-extras.
[[example]]
name = "basic-telemetry"
path = "examples/05-integrations/telemetry/basic-telemetry.rs"
required-features = ["openai"]

# 06-extensibility
[[example]]
name = "custom-provider-options"
path = "examples/06-extensibility/custom-provider-options.rs"
required-features = ["xai"]

[[example]]
name = "custom_provider_parameters"
path = "examples/06-extensibility/custom_provider_parameters.rs"
required-features = ["xai"]

[[example]]
name = "custom_provider_implementation"
path = "examples/06-extensibility/custom_provider_implementation.rs"

[[example]]
name = "custom_provider_spec"
path = "examples/06-extensibility/custom-provider-spec.rs"
required-features = ["openai"]

[[example]]
name = "complete_custom_provider"
path = "examples/06-extensibility/complete-custom-provider.rs"
required-features = ["openai"]

[[example]]
name = "testing_executors"
path = "examples/06-extensibility/executor-testing.rs"

# 07-applications
[[example]]
name = "chatbot"
path = "examples/07-applications/chatbot.rs"
required-features = ["openai"]

[[example]]
name = "code-assistant"
path = "examples/07-applications/code-assistant.rs"
required-features = ["openai"]

[[example]]
name = "api-server"
path = "examples/07-applications/api-server.rs"
required-features = ["openai"]

# 07-applications/api-server (advanced server adapters live in siumai-extras)
