[package]
name = "siumai-core"
version = "0.0.1"
edition = "2024"
license = "MIT OR Apache-2.0"
description = "Core traits, types and execution primitives for Siumai"

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
futures = { workspace = true }
futures-util = { workspace = true }
async-trait = { workspace = true }
reqwest = { workspace = true }
once_cell = { workspace = true }
infer = { workspace = true }
eventsource-stream = { workspace = true }

[lib]
name = "siumai_core"
path = "src/lib.rs"
