[package]
name = "siumai-provider-minimaxi"
version = "0.0.1"
edition = "2024"
license = "MIT OR Apache-2.0"
description = "MiniMaxi provider implementation for Siumai (extracted crate)"

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
async-trait = { workspace = true }
reqwest = { workspace = true }
siumai-core = { path = "../siumai-core" }
siumai-std-openai = { path = "../siumai-std-openai" }
siumai-std-anthropic = { path = "../siumai-std-anthropic" }

[lib]
name = "siumai_provider_minimaxi"
path = "src/lib.rs"

